# MPI_GCN_CPU

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c
Matrix/: Matrix.c  sparseMat.c
NeuralNet/: activationLayer.c  dropoutLayer.c  gcnLayer.c  lossFunctions.c  masking.c  neuralNet.c  optimizer.c
includes/: activationLayer.h  argParse.h  basic.h  comm.h  dropoutLayer.h  fileio.h  gcnLayer.h  lossFunctions.h  masking.h  matrix.h  neuralNet.h  nodeSampling.h  optimizer.h  sparseMat.h  typedef.h
src/: argParse.c  basic.c  comm.c  fileio.c  nodeSampling.c  typedef.c
